--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6d876a2",
    "metadata": {},
    "outputs": [],
@@ -16,15 +16,24 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "import torchvision.transforms.functional as TF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0073268a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this if you are using any Cuda enabled system\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ea8b798a",
    "metadata": {},
    "outputs": [],
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34d5dd61",
    "metadata": {},
    "outputs": [],
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b0378ce8",
    "metadata": {},
    "outputs": [],
@@ -147,8 +156,7 @@
     "            skip_connection = skip_connections[idx//2]\n",
     "\n",
     "            if x.shape != skip_connection.shape:\n",
-    "                # x = tf.resize(x, size=skip_connection.shape[2:])\n",
-    "                print(\"ERROR: shape mismatch \", x.shape, skip_connection.shape)\n",
+    "                x = TF.resize(x, size=skip_connection.shape[2:])\n",
     "\n",
     "            concat_skip = torch.cat((skip_connection, x), dim=1)\n",
     "            x =self.ups[idx+1](concat_skip)\n",
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f0378969",
    "metadata": {},
    "outputs": [],
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cfe3a4fa",
    "metadata": {},
    "outputs": [],
@@ -259,10 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dc3364d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m     27\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m---> 29\u001b[0m     running_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_epochs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss\u001b[38;5;241m.\u001b[39mitem()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "model = UNet(in_channel=3, out_channel=3).to(device)\n",
     "\n",
@@ -382,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
